--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<main>
 			<div class="box">
 				<div class="qr">
-					<img src="/images/image-qr-code.png" alt="qr" />
+					<img src="images/image-qr-code.png" alt="qr" />
 				</div>
 				<div class="qr-text">
 					<h3 class="outfit-bold">
