--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<img src="images/image-qr-code.png" alt="qr" />
 				</div>
 				<div class="qr-text">
-					<h3 class="outfit-bold">
+					<p class="outfit-bold">
 						Improve your front-end skills by building projects
-					</h3>
+					</p>
 					<p class="outfit-reg">
 						Scan the QR code to visit Frontend Mentor and take your coding
 						skills to the next level
